apps/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-ingress
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: "production-letsencrypt"
spec:
  tls:
  - hosts:
    - "kub3.dev"
    secretName: app-letsencrypt-cert
  - hosts:
    - "api.kub3.dev"
    secretName: api-letsencrypt-cert
  ingressClassName: nginx
  rules:
  - host: kub3.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  - host: api.kub3.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
